--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,7 +36,7 @@ jobs:
         go-version: '1.23'
 
     - name: Build
-      run: go build -o ./build/ -v ./...
+      run: CGO_ENABLED=0 go build -o ./build/ -v ./...
 
     - name: Test
       run: go test -v ./...
