--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,10 +36,14 @@ jobs:
         go-version: '1.23'
 
     - name: Build
-      run: CGO_ENABLED=0 go build -o ./build/ -v ./...
+      run: go build -o ./build/ -v ./...
+      env:
+        CGO_ENABLED: 0 
 
     - name: Test
       run: go test -v ./...
+      env:
+        CGO_ENABLED: 0 
 
     - name: 'Upload Artifact'
       uses: actions/upload-artifact@v4
